# hatch

./: .gitmodules  CMakeLists.txt
hydra_hatches/compiled/: 010073c001d5e000.hatch
include/hatch/: binary.hpp  builder.hpp  common.hpp  format.hpp  hatch.hpp  parser.hpp
src/: CMakeLists.txt  binary.cpp  builder.cpp  parser.cpp
src/cli/: main.cpp
